--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -8,7 +8,7 @@
     <body>
         {{> header}}
         <main>
-            <p class="help">{{helpText}}</p>
+            <p class="help">{{helpText}} {{link "Weather page" "/"}}.</p>
         </main>
         {{> footer}}
     </body>
